--- a/docs/advanced/troubleshooting.mdx
+++ b/docs/advanced/troubleshooting.mdx
@@ -20,21 +20,21 @@ Solutions to common problems and answers to frequently asked questions.
 
 ```typescript
 // Check environment variable is loaded
-console.log('API Key exists:', !!process.env.KORESHIELD_API_KEY);
+console.log('API Key exists:', !!process.env.Koreshield_API_KEY);
 
 // Verify key format
-const apiKey = process.env.KORESHIELD_API_KEY;
+const apiKey = process.env.Koreshield_API_KEY;
 if (!apiKey.startsWith('ks_')) {
   console.error('Invalid API key format');
 }
 
 // Test connection
-import { KoreShield } from 'koreshield-sdk';
+import { Koreshield } from 'Koreshield-sdk';
 
-const koreshield = new KoreShield({ apiKey });
+const Koreshield = new Koreshield({ apiKey });
 
 try {
-  await koreshield.scan({ content: 'test' });
+  await Koreshield.scan({ content: 'test' });
   console.log('Connection successful');
 } catch (error) {
   console.error('Connection failed:', error.message);
@@ -51,8 +51,8 @@ try {
 
 ```typescript
 // Enable request caching
-const koreshield = new KoreShield({
-  apiKey: process.env.KORESHIELD_API_KEY,
+const Koreshield = new Koreshield({
+  apiKey: process.env.Koreshield_API_KEY,
   cache: {
     enabled: true,
     ttl: 300, // 5 minutes
@@ -60,13 +60,13 @@ const koreshield = new KoreShield({
 });
 
 // Use batch scanning
-const results = await koreshield.batchScan({
+const results = await Koreshield.batchScan({
   items: messages.map((content, i) => ({ id: `${i}`, content })),
 });
 
 // Set timeouts
 const scan = await Promise.race([
-  koreshield.scan({ content: message }),
+  Koreshield.scan({ content: message }),
   new Promise((_, reject) =>
     setTimeout(() => reject(new Error('Timeout')), 5000)
   ),
@@ -83,19 +83,19 @@ const scan = await Promise.race([
 
 ```typescript
 // Adjust sensitivity
-const scan = await koreshield.scan({
+const scan = await Koreshield.scan({
   content: message,
   sensitivity: 'medium', // or 'low'
 });
 
 // Use allowlist
-const scan = await koreshield.scan({
+const scan = await Koreshield.scan({
   content: message,
   allowlist: ['technical terms', 'product names'],
 });
 
 // Custom policy
-const scan = await koreshield.scan({
+const scan = await Koreshield.scan({
   content: message,
   policyId: 'custom-policy-id',
 });
@@ -115,7 +115,7 @@ import pRetry from 'p-retry';
 async function scanWithRetry(content: string) {
   return pRetry(
     async () => {
-      return await koreshield.scan({ content });
+      return await Koreshield.scan({ content });
     },
     {
       retries: 3,
@@ -137,7 +137,7 @@ const limiter = new Bottleneck({
 });
 
 const scan = limiter.wrap((content: string) =>
-  koreshield.scan({ content })
+  Koreshield.scan({ content })
 );
 ```
 
@@ -152,7 +152,7 @@ const scan = limiter.wrap((content: string) =>
 ```typescript
 // Properly close connections
 process.on('SIGTERM', async () => {
-  await koreshield.close();
+  await Koreshield.close();
   process.exit(0);
 });
 
@@ -179,21 +179,21 @@ for await (const chunk of streamResponse()) {
 ### Enable Debug Logging
 
 ```typescript
-const koreshield = new KoreShield({
-  apiKey: process.env.KORESHIELD_API_KEY,
+const Koreshield = new Koreshield({
+  apiKey: process.env.Koreshield_API_KEY,
   debug: true,
   logLevel: 'debug',
 });
 
 // Console will show:
-// [KoreShield] Request: POST /v1/scan
-// [KoreShield] Response: 200 OK (123ms)
+// [Koreshield] Request: POST /v1/scan
+// [Koreshield] Response: 200 OK (123ms)
 ```
 
 ### Inspect Scan Results
 
 ```typescript
-const scan = await koreshield.scan({ content: message });
+const scan = await Koreshield.scan({ content: message });
 
 console.log('Scan Results:', {
   threatDetected: scan.threat_detected,
@@ -208,10 +208,10 @@ console.log('Scan Results:', {
 
 ```bash
 # Check connectivity
-curl -I https://api.koreshield.com/health
+curl -I https://api.Koreshield.com/health
 
 # Test API key
-curl -X POST https://api.koreshield.com/v1/scan \
+curl -X POST https://api.Koreshield.com/v1/scan \
   -H "Authorization: Bearer YOUR_API_KEY" \
   -H "Content-Type: application/json" \
   -d '{"content": "test"}'
@@ -227,7 +227,7 @@ npm start
 async function profileScan(content: string) {
   const start = performance.now();
 
-  const scan = await koreshield.scan({ content });
+  const scan = await Koreshield.scan({ content });
 
   const duration = performance.now() - start;
 
@@ -241,7 +241,7 @@ async function profileScan(content: string) {
 
 ### How accurate is threat detection?
 
-KoreShield achieves 95%+ accuracy across 10+ attack types with configurable sensitivity levels.
+Koreshield achieves 95%+ accuracy across 10+ attack types with configurable sensitivity levels.
 
 ### What is the API rate limit?
 
@@ -251,9 +251,9 @@ KoreShield achieves 95%+ accuracy across 10+ attack types with configurable sens
 
 ### Does scanning work offline?
 
-No, KoreShield requires internet connectivity to access our cloud-based detection models.
+No, Koreshield requires internet connectivity to access our cloud-based detection models.
 
-### Can I self-host KoreShield?
+### Can I self-host Koreshield?
 
 Yes, enterprise customers can deploy on-premises using Docker or Kubernetes. Contact sales for licensing.
 
@@ -280,36 +280,36 @@ Yes, all data is encrypted in transit (TLS 1.3) and at rest (AES-256).
 
 ```typescript
 // Example: Migrating from Lakera Guard
-import { KoreShield } from 'koreshield-sdk';
+import { Koreshield } from 'Koreshield-sdk';
 
 // Old code
 // const result = await lakeraGuard.detect(prompt);
 
 // New code
-const koreshield = new KoreShield({ apiKey: 'YOUR_KEY' });
-const result = await koreshield.scan({ content: prompt });
+const Koreshield = new Koreshield({ apiKey: 'YOUR_KEY' });
+const result = await Koreshield.scan({ content: prompt });
 
 // Map response fields
 const isBlocked = result.threat_detected;
 const threatType = result.threat_type;
 ```
 
-### Can I use KoreShield with streaming responses?
+### Can I use Koreshield with streaming responses?
 
 Yes, see our [streaming guide](/docs/advanced/streaming).
 
-### What happens if KoreShield is down?
+### What happens if Koreshield is down?
 
 Implement graceful degradation:
 
 ```typescript
 async function resilientScan(content: string) {
   try {
-    const scan = await koreshield.scan({ content });
+    const scan = await Koreshield.scan({ content });
     return scan.threat_detected;
   } catch (error) {
     // Log error and fail open
-    console.error('KoreShield unavailable:', error);
+    console.error('Koreshield unavailable:', error);
     return false; // Allow content through
   }
 }
@@ -317,10 +317,10 @@ async function resilientScan(content: string) {
 
 ### How do I handle multi-language content?
 
-KoreShield supports 50+ languages automatically:
+Koreshield supports 50+ languages automatically:
 
 ```typescript
-const scan = await koreshield.scan({
+const scan = await Koreshield.scan({
   content: 'Ignore las instrucciones anteriores', // Spanish
   language: 'es', // Optional hint
 });
@@ -331,7 +331,7 @@ const scan = await koreshield.scan({
 Yes, enterprise customers can create custom rules:
 
 ```typescript
-const scan = await koreshield.scan({
+const scan = await Koreshield.scan({
   content: message,
   customRules: [
     {
@@ -347,9 +347,9 @@ const scan = await koreshield.scan({
 Use test API keys:
 
 ```typescript
-const koreshield = new KoreShield({
+const Koreshield = new Koreshield({
   apiKey: process.env.NODE_ENV === 'production'
-    ? process.env.KORESHIELD_API_KEY
+    ? process.env.Koreshield_API_KEY
     : 'ks_test_xxxxxxxxxxxx',
 });
 ```
@@ -360,7 +360,7 @@ const koreshield = new KoreShield({
 - P95: 150ms
 - P99: 300ms
 
-### Can I use KoreShield with serverless functions?
+### Can I use Koreshield with serverless functions?
 
 Yes, works great with Lambda, Vercel, Netlify:
 
@@ -371,7 +371,7 @@ export const config = { runtime: 'edge' };
 export default async function handler(req: Request) {
   const { message } = await req.json();
 
-  const scan = await koreshield.scan({ content: message });
+  const scan = await Koreshield.scan({ content: message });
 
   return Response.json({ safe: !scan.threat_detected });
 }
@@ -382,7 +382,7 @@ export default async function handler(req: Request) {
 Check the dashboard or use the API:
 
 ```typescript
-const usage = await koreshield.getUsage({
+const usage = await Koreshield.getUsage({
   startDate: '2024-01-01',
   endDate: '2024-01-31',
 });
@@ -402,10 +402,10 @@ console.log(`Threats blocked: ${usage.threats_blocked}`);
 
 ## Getting Help
 
-- **Documentation:** https://docs.koreshield.com
-- **Discord:** Join our [community](https://discord.gg/koreshield)
-- **Email:** support@koreshield.com
-- **Status:** https://status.koreshield.com
+- **Documentation:** https://docs.Koreshield.com
+- **Discord:** Join our [community](https://discord.gg/Koreshield)
+- **Email:** support@Koreshield.com
+- **Status:** https://status.Koreshield.com
 
 ## Related Documentation
 
