--- a/docs/getting-started/quick-start.mdx
+++ b/docs/getting-started/quick-start.mdx
@@ -7,10 +7,10 @@ slug: /getting-started/quick-start
 
 # Introduction
 
-**KoreShield** is an enterprise-grade security middleware designed to protect GenAI applications from prompt injection, data exfiltration, and operational abuse. It functions as an intelligent firewall between your application and LLM providers (e.g., OpenAI, Anthropic, DeepSeek).
+**Koreshield** is an enterprise-grade security middleware designed to protect GenAI applications from prompt injection, data exfiltration, and operational abuse. It functions as an intelligent firewall between your application and LLM providers (e.g., OpenAI, Anthropic, DeepSeek).
 
 :::info Kore Value
-KoreShield ensures that your LLM applications remain secure, compliant, and reliable by sanitizing inputs and validating outputs in real-time.
+Koreshield ensures that your LLM applications remain secure, compliant, and reliable by sanitizing inputs and validating outputs in real-time.
 :::
 
 ## The Security Challenge
@@ -22,9 +22,9 @@ Integrating LLMs into production environments introduces novel attack vectors th
 3.  **Data Leakage**: Unintentional exposure of PII (Personally Identifiable Information) or proprietary secrets.
 4.  **Denial of Service**: Resource exhaustion attacks targeting expensive LLM tokens.
 
-## How KoreShield Works
+## How Koreshield Works
 
-KoreShield operates as a **transparent proxy**. It intercepts API requests, performs deep security analysis, and enforces your organization's security policies before the request reaches the model provider.
+Koreshield operates as a **transparent proxy**. It intercepts API requests, performs deep security analysis, and enforces your organization's security policies before the request reaches the model provider.
 
 
 
