--- a/docs/integrations/azure-deployment.mdx
+++ b/docs/integrations/azure-deployment.mdx
@@ -1,8 +1,8 @@
 ---
 title: Azure Deployment
-description: Deploying KoreShield on Azure Container Apps or AKS.
+description: Deploying Koreshield on Azure Container Apps or AKS.
 ---
 
 # Azure Deployment
 
-*Documentation in progress. Steps to deploy the KoreShield Docker image to Azure Container Apps.*
+*Documentation in progress. Steps to deploy the Koreshield Docker image to Azure Container Apps.*
