--- a/docs/integrations/azure-openai.mdx
+++ b/docs/integrations/azure-openai.mdx
@@ -5,4 +5,4 @@ description: Enterprise-grade security for Azure OpenAI deployments.
 
 # Azure OpenAI Integration
 
-*Documentation in progress. Configure KoreShield to work with your private Azure OpenAI endpoints and deployments.*
+*Documentation in progress. Configure Koreshield to work with your private Azure OpenAI endpoints and deployments.*
