--- a/docs/integrations/heroku.mdx
+++ b/docs/integrations/heroku.mdx
@@ -1,6 +1,6 @@
 ---
 title: Heroku Deployment
-description: Deploying KoreShield to Heroku dynos.
+description: Deploying Koreshield to Heroku dynos.
 ---
 
 # Heroku Deployment
