--- a/docs/integrations/hubspot.mdx
+++ b/docs/integrations/hubspot.mdx
@@ -20,10 +20,10 @@ Integration typically happens at the **Workflow** level or via a custom **Middle
 ### Example: Scanning Ticket Content
 
 ```python
-from koreshield import AsyncKoreShieldClient
-from koreshield.crm_templates.hubspot import HUBSPOT_TEMPLATE
+from Koreshield import AsyncKoreshieldClient
+from Koreshield.crm_templates.hubspot import HUBSPOT_TEMPLATE
 
-client = AsyncKoreShieldClient(api_key="ks_...")
+client = AsyncKoreshieldClient(api_key="ks_...")
 
 # Incoming ticket webhook payload
 ticket_data = {
