--- a/docs/integrations/index.mdx
+++ b/docs/integrations/index.mdx
@@ -1,11 +1,11 @@
 ---
 title: Integrations
-description: Integrate KoreShield with popular frameworks and platforms
+description: Integrate Koreshield with popular frameworks and platforms
 ---
 
 # Integrations
 
-KoreShield provides seamless integration with popular frameworks and platforms. Choose your framework below to get started with secure AI integration.
+Koreshield provides seamless integration with popular frameworks and platforms. Choose your framework below to get started with secure AI integration.
 
 ## JavaScript/TypeScript SDK
 
@@ -14,7 +14,7 @@ Our comprehensive JavaScript/TypeScript SDK supports all major frameworks and en
 ### Quick Install
 
 ```bash
-npm install koreshield
+npm install Koreshield
 ```
 
 ### Framework Guides
@@ -30,10 +30,10 @@ npm install koreshield
 ### Universal Usage
 
 ```javascript
-import { createClient } from 'koreshield';
+import { createClient } from 'Koreshield';
 
 const client = createClient({
-    baseURL: 'https://your-koreshield-instance.com',
+    baseURL: 'https://your-Koreshield-instance.com',
     apiKey: 'your-api-key'
 });
 
@@ -60,22 +60,22 @@ Our Python integration guides cover the most popular web frameworks and LLM tool
 ### Installation
 
 ```bash
-pip install koreshield
+pip install Koreshield
 ```
 
 ## Platform Integrations
 
 ### Vercel
 
-Deploy KoreShield-protected applications on Vercel with edge function support.
+Deploy Koreshield-protected applications on Vercel with edge function support.
 
 ### Netlify
 
-Integrate KoreShield with Netlify functions and edge handlers.
+Integrate Koreshield with Netlify functions and edge handlers.
 
 ### Cloudflare Workers
 
-Run KoreShield in Cloudflare's edge network for global performance.
+Run Koreshield in Cloudflare's edge network for global performance.
 
 ### AWS Lambda
 
@@ -83,7 +83,7 @@ Serverless integration with AWS Lambda functions.
 
 ### Docker
 
-Containerized deployments with KoreShield.
+Containerized deployments with Koreshield.
 
 ## API Integrations
 
@@ -92,12 +92,12 @@ Containerized deployments with KoreShield.
 Drop-in replacement for OpenAI SDK with security monitoring.
 
 ```javascript
-import { KoreShieldOpenAI } from 'koreshield';
+import { KoreshieldOpenAI } from 'Koreshield';
 
 // Replace your OpenAI import
-const openai = new KoreShieldOpenAI({
-    baseURL: 'https://your-koreshield-instance.com',
-    apiKey: 'your-koreshield-api-key'
+const openai = new KoreshieldOpenAI({
+    baseURL: 'https://your-Koreshield-instance.com',
+    apiKey: 'your-Koreshield-api-key'
 });
 
 // Use exactly like OpenAI SDK - with security!
@@ -154,6 +154,6 @@ Error tracking with security context.
 ## Need Help?
 
 - 📖 [SDK Documentation](/docs/reference/sdk)
-- 💬 [Community Discussions](https://github.com/koreshield/koreshield/discussions)
-- 🐛 [Report Integration Issues](https://github.com/koreshield/koreshield/issues)
-- 📧 [Contact Support](mailto:support@koreshield.com)
+- 💬 [Community Discussions](https://github.com/Koreshield/Koreshield/discussions)
+- 🐛 [Report Integration Issues](https://github.com/Koreshield/Koreshield/issues)
+- 📧 [Contact Support](mailto:support@Koreshield.com)
