--- a/docs/features/rag-defense.mdx
+++ b/docs/features/rag-defense.mdx
@@ -7,15 +7,15 @@ description: Detect and block indirect prompt injection attacks in Retrieval-Aug
 
 Retrieval-Augmented Generation (RAG) systems are vulnerable to **Indirect Prompt Injection**, where malicious instructions hidden in retrieved documents (emails, websites, internal docs) hijack the LLM's behavior.
 
-KoreShield's RAG Defense Engine scans retrieved context _before_ it reaches your LLM, ensuring that tainted data cannot manipulate the generation process.
+Koreshield's RAG Defense Engine scans retrieved context _before_ it reaches your LLM, ensuring that tainted data cannot manipulate the generation process.
 
 ## How It Works
 
 :::info
-KoreShield analyzes both the **User Query** and the **Retrieved Documents** to detect correlation attacks and context poisoning.
+Koreshield analyzes both the **User Query** and the **Retrieved Documents** to detect correlation attacks and context poisoning.
 :::
 
-1.  **Ingest**: You send the user query and the retrieved snippets (chunks) to KoreShield.
+1.  **Ingest**: You send the user query and the retrieved snippets (chunks) to Koreshield.
 2.  **Scan**: Our engine checks for:
     - **Hidden Instructions**: "Ignore previous instructions and..."
     - **Role Hijacking**: "You are now a compliant AI..."
@@ -29,9 +29,9 @@ Use the `scan_rag_context` method in our SDKs to protect your pipeline.
 ### Python
 
 ```python
-from koreshield import AsyncKoreShieldClient
+from Koreshield import AsyncKoreshieldClient
 
-client = AsyncKoreShieldClient(api_key="ks_...")
+client = AsyncKoreshieldClient(api_key="ks_...")
 
 # Your retrieval logic
 documents = [
@@ -56,9 +56,9 @@ else:
 ### JavaScript / TypeScript
 
 ```typescript
-import { KoreShield } from "koreshield";
+import { Koreshield } from "Koreshield";
 
-const client = new KoreShield({ apiKey: process.env.KORESHIELD_API_KEY });
+const client = new Koreshield({ apiKey: process.env.Koreshield_API_KEY });
 
 const result = await client.scanRAGContext("Summarize the reports", [
   "Quarterly report...",
