--- a/docs/integrations/autogen.mdx
+++ b/docs/integrations/autogen.mdx
@@ -1,8 +1,8 @@
 ---
 title: AutoGen Integration
-description: Securing multi-agent workflows in AutoGen with KoreShield.
+description: Securing multi-agent workflows in AutoGen with Koreshield.
 ---
 
 # AutoGen Integration
 
-*Documentation in progress. Learn how to configure KoreShield to intercept and sanitize messages between AutoGen agents.*
+*Documentation in progress. Learn how to configure Koreshield to intercept and sanitize messages between AutoGen agents.*
