--- a/docs/integrations/aws-deployment.mdx
+++ b/docs/integrations/aws-deployment.mdx
@@ -1,8 +1,8 @@
 ---
 title: AWS Deployment
-description: Deploying KoreShield on AWS ECS, EKS, or EC2.
+description: Deploying Koreshield on AWS ECS, EKS, or EC2.
 ---
 
 # AWS Deployment
 
-*Documentation in progress. Recommended architecture includes running KoreShield in ECS behind an Application Load Balancer.*
+*Documentation in progress. Recommended architecture includes running Koreshield in ECS behind an Application Load Balancer.*
