--- a/docs/integrations/digitalocean.mdx
+++ b/docs/integrations/digitalocean.mdx
@@ -5,4 +5,4 @@ description: Deploying on DigitalOcean App Platform or Droplets.
 
 # DigitalOcean Deployment
 
-*Documentation in progress. Run KoreShield as a component in the App Platform directly from the Docker Hub image.*
+*Documentation in progress. Run Koreshield as a component in the App Platform directly from the Docker Hub image.*
