--- a/docs/integrations/gcp-deployment.mdx
+++ b/docs/integrations/gcp-deployment.mdx
@@ -1,8 +1,8 @@
 ---
 title: GCP Deployment
-description: Deploying KoreShield on Google Cloud Run or GKE.
+description: Deploying Koreshield on Google Cloud Run or GKE.
 ---
 
 # GCP Deployment
 
-*Documentation in progress. We recommend Cloud Run for serverless deployment of the KoreShield proxy.*
+*Documentation in progress. We recommend Cloud Run for serverless deployment of the Koreshield proxy.*
