--- a/docs/integrations/python-fastapi.mdx
+++ b/docs/integrations/python-fastapi.mdx
@@ -1,37 +1,37 @@
 ---
 title: FastAPI
-description: Integrate KoreShield with FastAPI applications
+description: Integrate Koreshield with FastAPI applications
 icon: LayoutDashboard
 ---
 
 # FastAPI Integration Guide
 
-KoreShield integrates seamlessly with **FastAPI** applications, allowing you to protect your endpoints with minimal code changes.
+Koreshield integrates seamlessly with **FastAPI** applications, allowing you to protect your endpoints with minimal code changes.
 
 ## Overview
 
-There are two primary ways to integrate KoreShield with FastAPI:
+There are two primary ways to integrate Koreshield with FastAPI:
 
 1.  **Middleware approach**: Protects all or specific routes automatically.
 2.  **Dependency injection**: Allows fine-grained control inside route handlers.
 
 ## Option 1: Dependency Injection (Recommended)
 
-Using dependency injection gives you access to the KoreShield client within your route, allowing you to handle blocked requests gracefully or return custom error responses.
+Using dependency injection gives you access to the Koreshield client within your route, allowing you to handle blocked requests gracefully or return custom error responses.
 
 ```python
 from fastapi import FastAPI, Depends, HTTPException
-from koreshield.client import KoreShieldClient
+from Koreshield.client import KoreshieldClient
 import os
 
 app = FastAPI()
 
-def get_koreshield():
-    # Configure with your KoreShield Proxy URL
-    return KoreShieldClient(base_url=os.getenv("KORESHIELD_URL", "http://localhost:8000"))
+def get_Koreshield():
+    # Configure with your Koreshield Proxy URL
+    return KoreshieldClient(base_url=os.getenv("Koreshield_URL", "http://localhost:8000"))
 
 @app.post("/chat")
-async def chat(message: str, ks: KoreShieldClient = Depends(get_koreshield)):
+async def chat(message: str, ks: KoreshieldClient = Depends(get_Koreshield)):
     # 1. Guard the input
     result = await ks.guard(message)
     
@@ -56,9 +56,9 @@ async def chat(message: str, ks: KoreShieldClient = Depends(get_koreshield)):
 
 ## Configuration
 
-Ensure your KoreShield Proxy is running and accessible. By default, the client connects to `http://localhost:8000`. You can configure this via environment variables or constructor arguments.
+Ensure your Koreshield Proxy is running and accessible. By default, the client connects to `http://localhost:8000`. You can configure this via environment variables or constructor arguments.
 
 | Environment Variable | Description | Default |
 |----------------------|-------------|---------|
-| `KORESHIELD_URL` | URL of the KoreShield Proxy | `http://localhost:8000` |
-| `KORESHIELD_API_KEY` | API Key (if auth enabled) | None |
+| `Koreshield_URL` | URL of the Koreshield Proxy | `http://localhost:8000` |
+| `Koreshield_API_KEY` | API Key (if auth enabled) | None |
