--- a/docs/integrations/railway.mdx
+++ b/docs/integrations/railway.mdx
@@ -5,4 +5,4 @@ description: One-click deployment guide for Railway.
 
 # Railway Deployment
 
-*Documentation in progress. Use our Railway template to spin up KoreShield with a Redis instance in seconds.*
+*Documentation in progress. Use our Railway template to spin up Koreshield with a Redis instance in seconds.*
