--- a/docs/integrations/semantic-kernel.mdx
+++ b/docs/integrations/semantic-kernel.mdx
@@ -1,8 +1,8 @@
 ---
 title: Semantic Kernel Integration
-description: Learn how to use KoreShield with Microsoft Semantic Kernel.
+description: Learn how to use Koreshield with Microsoft Semantic Kernel.
 ---
 
 # Semantic Kernel Integration
 
-*Documentation in progress. This guide will cover how to inject KoreShield as a custom connector or middleware in Semantic Kernel pipelines.*
+*Documentation in progress. This guide will cover how to inject Koreshield as a custom connector or middleware in Semantic Kernel pipelines.*
