--- a/docs/resources/index.mdx
+++ b/docs/resources/index.mdx
@@ -109,7 +109,7 @@ When running in Proxy Mode, Koreshield sits transparently between your applicati
   <div className="col col--6" style={{ marginBottom: "1rem" }}>
     <div className="card">
       <div className="card__header">
-        <h3>📦 Installation</h3>
+        <h3>Installation</h3>
       </div>
       <div className="card__body">
         <p>Get up and running with Koreshield in minutes.</p>
@@ -127,7 +127,7 @@ When running in Proxy Mode, Koreshield sits transparently between your applicati
   <div className="col col--6" style={{ marginBottom: "1rem" }}>
     <div className="card">
       <div className="card__header">
-        <h3>⚡ Quick Start</h3>
+        <h3>Quick Start</h3>
       </div>
       <div className="card__body">
         <p>Learn how to secure your first LLM integration.</p>
@@ -145,7 +145,7 @@ When running in Proxy Mode, Koreshield sits transparently between your applicati
   <div className="col col--6" style={{ marginBottom: "1rem" }}>
     <div className="card">
       <div className="card__header">
-        <h3>⚙️ Configuration</h3>
+        <h3>Configuration</h3>
       </div>
       <div className="card__body">
         <p>Configure security policies and provider settings.</p>
@@ -163,7 +163,7 @@ When running in Proxy Mode, Koreshield sits transparently between your applicati
   <div className="col col--6" style={{ marginBottom: "1rem" }}>
     <div className="card">
       <div className="card__header">
-        <h3>📚 API Reference</h3>
+        <h3>API Reference</h3>
       </div>
       <div className="card__body">
         <p>Explore the complete Koreshield API.</p>
